--- a/.github/workflows/main_trelloprojet.yml
+++ b/.github/workflows/main_trelloprojet.yml
@@ -6,7 +6,7 @@ name: Build and deploy ASP.Net Core app to Azure Web App - trelloprojet
 on:
   push:
     branches:
-      - maim
+      - main
   workflow_dispatch:
 
 jobs:
